Changes for next version (TBD)
  - Change t/bigfloat.t from en_US to C locale (thanks Alex Kapranoff)

Changes for version 1.75 (June 25, 2015)
------------------------
  - Export only necessary from POSIX (RT#99970, thanks Alexandr Ciornii)
  - Upgrade Makefile.PL (thanks Alexandr Ciornii)
  - Fix testing issue with missing locales (RT 97607, 97766, thanks to KHW)
    (thanks David Solimano)
  - Fix testing issue with bad Russian data on some platforms (RT 92666)
    (thanks David Solimano)
  - Add t/bigfloat.t (thanks Paul Miller / Alexandr Ciornii)

Changes for version 1.74 (April 19, 2011)
------------------------
  - Only Perl 5.10.0 and newer supported
  - Allow multi-character (e.g. "&nbsp;" for thousands_sep) (thanks
    Nick Patch; RT 65489)
  - Strip out illegal negative values returned by localeconv(),
    observed on Windows - see @IGNORE_NEGATIVE (thanks Adam Kennedy;
    RT 56802)
  - Manage warnings when undef is passed to methods (RT 48038)
  - Fix round() for Math::BigFloat objects (RT 62059)

Changes for version 1.73 (September 25, 2009)
------------------------
  - Fix locale.t for RUR/RUB distinction (thanks Kevin Phair; RT 46660/45833)
  - Skip locale.t for BSD (thanks Zak B. Elep; RT 48481/46367)
  - In _get_self add UNIVERSAL::isa check on ref (thanks Jordan Macdonald)

Changes for version 1.72 (May 5, 2009)
------------------------
  - Use Makefile.PL based on suggestion in RT 38020
  - Add 'use strict' & 'use warnings'
  - Add MAX_INT constant for detecting overflows
  - Add helper sub _get_multipliers for getting kilo/mega/giga mult values
  - Add test in round() for overflow from large of a precision value (RT 40126)
  - Add .5 + 1e-14 to rounded value instead of .5000001 (RT 20298)
  - Fix undef $pic_prefix (RT 43029)
  - Add support for giga and base option in unformat_number (RT 40455)
  - Fix Russian locale issues, esp. in unformat_number (RT 40859)
  - Remove variables from error messages (XSS risk) and standardize errors