@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Number-Format
-version:             1.75
+version:             1.76
 abstract:            Perl extension for formatting numbers
 license:             perl
 author:
